<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverLay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopOverLay"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/oldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLines="1" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_newPassword"
            android:imeOptions="actionUnspecified"/>

        <Button
            android:id="@+id/changeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/btnRemove"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/change_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/changeEmail"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/changePassword"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/sending_pass_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/send_pass_reset_email"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/remove_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/remove_user"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            />
    </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
